--- a/backend/package.json
+++ b/backend/package.json
@@ -18,13 +18,15 @@
         "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mysql": "^2.15.26",
+        "@types/nodemailer": "^6.4.16",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "mysql2": "^3.11.0"
+        "mysql2": "^3.11.0",
+        "nodemailer": "^6.9.15"
     },
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
