--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "description": "",
+    "bundleDependencies": true,
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
@@ -26,14 +27,13 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mysql": "^2.15.26",
-        "@types/nodemailer": "^6.4.16",
-        "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.21",
         "@types/node": "^22.5.4",
+        "@types/nodemailer": "^6.4.16",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.5.4"
+        "typescript": "^5.6.3"
     }
 }
