--- a/backend/package.json
+++ b/backend/package.json
@@ -28,12 +28,13 @@
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/express-serve-static-core": "^4.19.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/mysql": "^2.15.26",
         "@types/node": "^22.5.4",
         "@types/nodemailer": "^6.4.16",
         "nodemon": "^3.1.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.2"
     }
 }
